syntax = "proto3";

package libenclave_proto;

message AgentServiceRequest{
    message Execute {
        string argv = 1;
        string envp = 2;
    }

    message Kill {
        int32 sig = 1;
    }

    message Attest {
	string spid       	= 1;
	string quote_type 	= 2;
	string product    	= 3;
	string subscription_key = 4;
    }

    Execute exec = 1;
    Kill kill = 2;
    Attest attest = 3;
}

message AgentServiceResponse {
    message Execute {
        int32 exitCode = 1;
        string error = 2;
    }

    message Attest {
	int32 exitCode = 1;
	string error = 2;
    }

    Execute exec = 1;
    Attest attest = 2;
}
